--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,27 +1,39 @@
-<h1>Groups#index</h1>
-<p>Find me in app/views/groups/index.html.erb</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="text-center mb-4">Groups#index</h1>
+      <p class="text-center text-muted">Find me in app/views/groups/index.html.erb</p>
 
-<table class="table table-hover table-inverse">
-    <thead>
-      <tr>
-        <th></th>
-        <th>グループ名</th>
-        <th>紹介文</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @groups.each do |group| %>
-        <tr>
-          <td><%= image_tag group.get_image, size:"50x50" %></td>
-          <td><%= link_to group.name, group_path(group) %></td>
-          <td><%= group.detail %></td>
-          <% if group.owner_id == current_user.id %>
-            <td>
-              <%= link_to 'Edit', edit_group_path(group), class: "btn btn-sm btn-success" %>
-            </td>
+      <table class="table table-hover table-bordered">
+        <thead class="table-light">
+          <tr>
+            <th class="text-center">Image</th>
+            <th class="text-center">グループ名</th>
+            <th class="text-center">紹介文</th>
+            <th class="text-center">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @groups.each do |group| %>
+            <tr>
+              <td class="text-center">
+                <%= image_tag group.get_image, size: "50x50", class: "rounded-circle" %>
+              </td>
+              <td>
+                <%= link_to group.name, group_path(group), class: "text-decoration-none fw-bold" %>
+              </td>
+              <td><%= group.detail %></td>
+              <% if group.owner_id == current_user.id %>
+                <td class="text-center">
+                  <%= link_to 'Edit', edit_group_path(group), class: "btn btn-sm btn-success" %>
+                </td>
+              <% else %>
+                <td class="text-center text-muted">N/A</td>
+              <% end %>
+            </tr>
           <% end %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
