--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,28 +1,36 @@
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-12">
+      <h2 class="text-center mb-4">Group Detail</h2>
 
-
-
-      <h2>Group Detail</h2>
-      <table class="table table-hover table-inverse">
-        <thead>
+      <table class="table table-hover table-bordered">
+        <thead class="table-light">
           <tr>
-            <th></th>
-            <th>グループ名</th>
-            <th>紹介文</th>
-            <th></th>
+            <th class="text-center">Image</th>
+            <th class="text-center">グループ名</th>
+            <th class="text-center">紹介文</th>
+            <th class="text-center">Actions</th>
           </tr>
         </thead>
         <tbody>
-            <tr>
-              <td><%= image_tag @group.get_image, size:"100x100" %></td>
-              <td><%= @group.name %></td>
-              <td><%= @group.detail %></td>
-              <% if @group.owner_id == current_user.id %>
-                <td>
-                  <%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-success" %>
-                </td>
-              <% end %>
-            </tr>
+          <tr>
+            <td class="text-center">
+              <%= image_tag @group.get_image, size: "100x100", class: "rounded-circle" %>
+            </td>
+            <td>
+              <%= @group.name %>
+            </td>
+            <td><%= @group.detail %></td>
+            <% if @group.owner_id == current_user.id %>
+              <td class="text-center">
+                <%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-success" %>
+              </td>
+            <% else %>
+              <td class="text-center text-muted">N/A</td>
+            <% end %>
+          </tr>
         </tbody>
       </table>
-
-
+    </div>
+  </div>
+</div>
