--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -45,23 +45,24 @@
 
       <!-- オーナー用: 参加申請中のユーザーリスト -->
       <% if @group.is_owned_by?(current_user) %>
-        <h4 class="mt-4">参加申請中のユーザー</h4>
-        <ul>
-          <% @group.group_users.applying.each do |group_user| %>
-            <li>
-              <%= group_user.user.name %>
-              <%= link_to '承認', group_group_user_path(@group, group_user), method: :patch, class: "btn btn-sm btn-success" %>
-            </li>
-          <% end %>
-        </ul>
-      <% end %>
+  <h4 class="mt-4">参加申請中のユーザー</h4>
+  <ul>
+    <% @group.group_users.applying.each do |group_user| %>
+      <li>
+        <%= group_user.user.name %>
+        <%= link_to '承認', approve_group_group_user_path(@group, group_user), method: :patch, class: "btn btn-sm btn-success" %>
+        <%= link_to '拒否', reject_group_group_user_path(@group, group_user), method: :delete, class: "btn btn-sm btn-danger" %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
 
       <h4 class="mt-4">参加者一覧</h4>
-      <ul>
-        <% @group.users.each do |user| %>
-          <li style="list-style: none;"><%= user.name %></li>
-        <% end %>
-      </ul>
+<ul>
+  <% @group.users.joins(:group_users).where(group_users: { status: :approved }).each do |user| %>
+    <li style="list-style: none;"><%= user.name %></li>
+  <% end %>
+</ul>
     </div>
   </div>
 </div>
