--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -23,6 +23,14 @@
           <%= f.submit 'Submit', class: 'btn btn-info btn-lg' %>
         </div>
       <% end %>
+
+      <!-- グループ削除ボタン -->
+      <div class="form-group text-center mt-4">
+        <%= button_to 'Delete Group', group_path(@group), 
+            method: :delete, 
+            data: { confirm: 'Are you sure you want to delete this group? This action cannot be undone.' }, 
+            class: 'btn btn-danger btn-lg' %>
+      </div>
     </div>
   </div>
 </div>
