--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -26,6 +26,18 @@
                 <strong><%= chat.user.name %>:</strong>
               <% end %>
               <%= chat.chat %>
+
+              <!-- 削除ボタン -->
+              <% if current_user == chat.user || @group.is_owned_by?(current_user) %>
+                <div class="text-right mt-2">
+                  <%= link_to '削除', group_chat_path(@group, chat), 
+                              method: :delete, 
+                              data: { confirm: '本当に削除しますか？' }, 
+                              class: 'btn btn-sm btn-danger' %>
+                </div>
+              <% end %>
+
+
             </div>
           </div>
         <% end %>
