--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'layouts/search' %>
+
 <h1 class="text-center my-4">ログイン者投稿一覧</h1>
 <p class="text-center">Find me in <code>app/views/posts/index.html.erb</code></p>
 
