--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,13 +4,24 @@
       <h1 class="text-center mb-4">Groups#index</h1>
       <p class="text-center text-muted">Find me in app/views/groups/index.html.erb</p>
 
+      <!-- 検索フォーム -->
+      <div class="mb-4">
+        <%= form_with url: groups_path, method: :get, local: true, class: "d-flex justify-content-center" do |form| %>
+          <div class="input-group" style="max-width: 600px;">
+            <%= form.text_field :q, value: params[:q], placeholder: "グループ名や紹介文で検索", class: "form-control" %>
+            <button class="btn btn-primary" type="submit">検索</button>
+          </div>
+        <% end %>
+      </div>
+
+      <!-- グループ一覧 -->
       <table class="table table-hover table-bordered">
         <thead class="table-light">
           <tr>
             <th class="text-center">Image</th>
             <th class="text-center">グループ名</th>
             <th class="text-center">紹介文</th>
-            <th class="text-center">参加者数</th> <!-- 参加者数列 -->
+            <th class="text-center">参加者数</th>
           </tr>
         </thead>
         <tbody>
@@ -23,7 +34,7 @@
                 <%= link_to group.name, group_path(group), class: "text-decoration-none fw-bold" %>
               </td>
               <td><%= group.detail %></td>
-              <td class="text-center"><%= group.approved_users_count %></td> <!-- 参加者数を承認されたユーザーのみに変更 -->
+              <td class="text-center"><%= group.approved_users_count %></td>
             </tr>
           <% end %>
         </tbody>
